@@ -5898,3 +5898,6 @@ PACKAGE: 2.2.99.2
 
 2006-12-06 tmb
  * Added placeholders for new eprint types
+
+2006-12-06
+ * Added broad strokes of Pubmed XML and Pubmed ID import plugins (needs refining later)
